# mars-os

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  fix_plan.md  ui_upgrade_plan.md
config/gnome/: mars-defaults.gschema.override
config/kde/: kcminputrc  kdeglobals  kscreenlockerrc  kwinrc  plasma-org.kde.plasma.desktop-appletsrc  powermanagementprofilesrc  sddm.conf
dock/: Cargo.toml
dock/src/: animation.rs  dock.rs  icons.rs  main.rs  windows.rs
docs/: reading-list.md  utm-on-mac.md
header/: Cargo.toml
header/src/: controls.rs  header.rs  main.rs  render.rs
mars-dock/: Cargo.toml
mars-dock/src/: animation.rs  dock.rs  main.rs  render.rs  windows.rs
plans/: sync-fs.md  ui-framework-apis.md
plans/trash/: ui-keyboard-events.md  ui-popup-surfaces.md  ui-slider-element.md
plans/ui-framework/: animations.md  backend.md  components.md  events.md  lifecycle.md  scroll.md  wayland.md
plans/ui-framework/implementation/: README.md  phase-1-core-and-layout.md  phase-2-display-list-and-renderer.md  phase-3-wayland-bootstrap.md  phase-4-reactive-state.md  phase-5-events.md  (+3 more)
plans/ui-upgrades/: 1-text-layout.md  2-layout.md  3-events.md  4-visual-properties.md  5-svg-rendering.md  6-form-elements.md
scripts/: apply-overlays.sh  build-arm64.sh  build-local.sh  build.sh  chroot-setup.sh  make-iso.sh  patch-image.sh  setup-ec2.sh  setup-vm.sh  test-qemu-arm64.sh  test-qemu.sh
spotlight/: Cargo.toml  README.md
spotlight/src/: apps.rs  main.rs  render.rs  spotlight.rs
ui/: Cargo.toml
ui/examples/: hello.rs
ui/src/: animation.rs  animator.rs  app.rs  color.rs  color_picker_state.rs  date_picker_state.rs  display_list.rs  element.rs  event_dispatch.rs  handle.rs  hit_test.rs  icon_registry.rs  input.rs  layout.rs  lib.rs  reactive.rs  renderer.rs  scroll.rs  select_state.rs  spring.rs  style.rs  svg_render.rs  text_input_state.rs  textarea_state.rs  theme.rs  wayland.rs
(+14 files in other folders)
