[package]
name = "mars-dock"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
log = "0.4"
env_logger = "0.11"
