[package]
name = "spotlight"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = { version = "0.19", features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
calloop = "0.14"
calloop-wayland-source = "0.4"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
fontdue = "0.7"
fuzzy-matcher = "0.3"
log = "0.4"
env_logger = "0.11"
